# alfred-mic

./: Cargo.toml  Makefile  config.toml
src/: main.rs  utils.rs
